fix font size adjustment on mobile landscape

--- a/scss/box-grid.scss
+++ b/scss/box-grid.scss
@@ -67,7 +67,7 @@
     .name {
       left: -100%;
       opacity: 0;
-      @include transition(all 200ms ease-out);
+      @include transition(all 200ms ease-in-out);
     }
 
     // .showcase {
